.Net core web api with mongoDB, repository pattern, Service.

--- a/webApiNetCore/appsettings.json
+++ b/webApiNetCore/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "BookStoreDatabase": {
+    "ConnectionString": "mongodb+srv://myuser:rNVvl1mH3iu1d6O2@usersystem.ekaz8u2.mongodb.net/?retryWrites=true&w=majority",
+    "DatabaseName": "BookStore",
+    
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
